--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 
 X. Have the raise check for its requirements automatically
 X. If you ctrl+c it will look like the command fails when exiting. global catchall
-. Change python getting code to sys.executable
+X. Change python getting code to sys.executable
 . Clear the terminal before each run so we don't have to clear; ./raise blah
 	Only clear the terminal when launched as './raise' not 'python raise'
 . Code reduction surgery
