--- a/TODO
+++ b/TODO
@@ -1,10 +1,6 @@
 
-X. Have the raise check for its requirements automatically
-X. If you ctrl+c it will look like the command fails when exiting. global catchall
-X. Change python getting code to sys.executable
-X. Clear the terminal before each run so we don't have to clear; ./raise blah
-X. Code reduction surgery
-X. Print a list of targets when none is provided
-. When checking for requirements it should check for them all before exiting.
-X. Add some examples to an 'examples' dir
+. Add help menu
+. Make it work on other Linux distros (Fedora, Debian, OpenSuse, Gentoo, Arch)
+. Make it work on BSD
+. Make it work on OpenSolaris
 
