Fixed Bug #1069280: 'Build targets starting with an underline should be ignored'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,4 +2,5 @@
 	* Fixed bug #1042007: './raise update only works when raise_actual starts with a period.'.
 	* Fixed Bug #1068745: 'is_outdated fails with ugly assert instead of frown'.
 	* Fixed Bug #1069282: 'The help message should more concise and helpful'.
+	* Fixed Bug #1069280: 'Build targets starting with an underline should be ignored'.
 
