Fixed Bug #1069279: 'Add building C objects in parallel'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,4 +4,6 @@
 	* Fixed Bug #1069282: 'The help message should more concise and helpful'.
 	* Fixed Bug #1069280: 'Build targets starting with an underline should be ignored'.
 	* Fixed Bug #1080970: 'Make highlighted text white, instead of system default'.
+	* Fixed Bug #1069279: 'Add building C objects in parallel'.
+
 
