--- a/ChangeLog
+++ b/ChangeLog
@@ -5,5 +5,6 @@
 	* Fixed Bug #1069280: 'Build targets starting with an underline should be ignored'.
 	* Fixed Bug #1080970: 'Make highlighted text white, instead of system default'.
 	* Fixed Bug #1069279: 'Add building C objects in parallel'.
+	* Fixed Bug #1042008: 'Network errors can corrupt updates'.
 
 
