--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 
-Raise is a small build automation tool.
+Raise is a small build automation tool that ships with your code.
 
 The project is hosted at http://launchpad.net/raise and licensed under
-the Expat License.
+a MIT style license.
 
 // Install requirements
 Python 2.6 or greater
