--- a/ChangeLog
+++ b/ChangeLog
@@ -8,4 +8,5 @@
 	* Fixed Bug #1042008: 'Network errors can corrupt updates'.
 	* Fixed Bug #1093034: 'If there is no rscript file, the error message is unhelpful'.
 	* Fixed Bug #1092346: 'mvfile fails across file systems'.
+	* Fixed Bug #1091416: 'Commands should not allow the removal of the current directory'.
 
