--- a/ChangeLog
+++ b/ChangeLog
@@ -9,4 +9,5 @@
 	* Fixed Bug #1093034: 'If there is no rscript file, the error message is unhelpful'.
 	* Fixed Bug #1092346: 'mvfile fails across file systems'.
 	* Fixed Bug #1091416: 'Commands should not allow the removal of the current directory'.
+	* Fixed Bug #1068752: 'When installing, programs should not be built as root'.
 
