In the Raise description, changed 'build automation tool' to 'software build tool'.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-Raise is a small build automation tool that ships with your code.
+Raise is a small software build tool that ships with your code.
 
 The project is hosted at http://launchpad.net/raise and licensed under
 a MIT style license.
