--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* Release 0.2.0
+	* Fixed Bug #1216466: 'Make it work on Windows with Cygwin'.
+
 2013-02-06 Release 0.1.0
 	* Fixed bug #1042007: './raise update only works when raise_actual starts with a period.'.
 	* Fixed Bug #1068745: 'is_outdated fails with ugly assert instead of frown'.
