--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * Release 0.2.0
+	* Fixed Bug #1225142: 'Remove gcc, ld, and ar as dependencies'.
 	* Fixed Bug #1225141: 'Add ldc and clang as fallback compilers'.
 	* Fixed Bug #1216448: 'Make basic C builds work on Windows without Cygwin'.
 	* Fixed Bug #1118920: 'Unknown architecture on Open Indiana 'i86pc''.
