Fixed Bug #1225293: 'Add basic Java support'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* Fixed Bug #1225296: 'Break raise_actual into modules'.
 	* Fixed Bug #1229457: 'Add basic C# support'.
 	* Fixed Bug #1228904: 'Make a test suite'.
+	* Fixed Bug #1225293: 'Add basic Java support'.
 
 2013-09-22 Release 0.2.0
 	* Fixed Bug #1223030: 'Make it complain if running in normal Windows terminal'.
