--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* Fixed Bug #1229457: 'Add basic C# support'.
 	* Fixed Bug #1228904: 'Make a test suite'.
 	* Fixed Bug #1225293: 'Add basic Java support'.
+	* Fixed Bug #1230068: 'Downloading should include version number'.
 
 2013-09-22 Release 0.2.0
 	* Fixed Bug #1223030: 'Make it complain if running in normal Windows terminal'.
