--- a/README
+++ b/README
@@ -13,3 +13,13 @@ Python 2.6 or greater
 ncurses
 stty
 
+
+// The test suite can be run with
+cd tests
+python test_suite.py
+sudo python root_test_suite.py
+
+
+// Examples can be run from the example directory
+cd examples/c_simple/
+./raise test
