--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * Release 0.3.0
+	* Fixed Bug #1228910: 'Add documentation'.
 	* Fixed Bug #1225296: 'Break raise_actual into modules'.
 	* Fixed Bug #1229457: 'Add basic C# support'.
 	* Fixed Bug #1228904: 'Make a test suite'.
