--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * Release 0.4.0
+	* Fixed Bug #1270694: 'Rename the Library module to Find'.
 	* Fixed Bug #1271797: 'Documentation cannot be generated with Python3'.
 
 2014-01-22 Release 0.3.0
