--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * Release 0.4.0
+	* Fixed Bug #1283584: 'Make library searching work on Gentoo'.
 	* Fixed Bug #1284393: 'Make library searching work on Slackware'.
 	* Fixed Bug #1228913: 'Make library searching work on Arch'.
 	* Fixed Bug #1279599: 'Make getting CPU info have more fallback techniques'.
