--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * Release 0.4.0
+	* Fixed Bug #1338428: 'Add a require environmental variable function'.
 	* Fixed Bug #1323439: 'Functions need wildcard support'.
 	* Fixed Bug #1283584: 'Make library searching work on Gentoo'.
 	* Fixed Bug #1284393: 'Make library searching work on Slackware'.
