--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * Release 0.4.0
+	* Fixed Bug #1326100: 'Make tests run with all compilers'.
 	* Fixed Bug #1277758: 'Add standard flags to C/C++ compilers'.
 	* Fixed Bug #1338428: 'Add a require environmental variable function'.
 	* Fixed Bug #1323439: 'Functions need wildcard support'.
