--- a/README
+++ b/README
@@ -13,6 +13,9 @@ Python 2.6 or greater
 ncurses
 stty
 
+// OS X install requirements
+Python 2.6 or greater
+stty
 
 // The test suite can be run with
 cd tests
