--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * Release 0.4.0
+	* Fixed Bug #1365123: 'Add basic file data cache server'.
 	* Fixed Bug #1325809: 'Compile time flags are broken in LDC and GDC'.
 	* Fixed Bug #1325810: 'Make Windows SDK only required for C/C++'.
 	* Fixed Bug #1326100: 'Make tests run with all compilers'.
