--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-* Release 0.4.0
+2014-09-12 Release 0.4.0
 	* Fixed Bug #1365825: 'Add a help menu'.
 	* Fixed Bug #1365128: 'Add basic OS X support'.
 	* Fixed Bug #1365123: 'Add basic file data cache server'.
