--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* Release 0.5.0
+
 2014-09-12 Release 0.4.0
 	* Fixed Bug #1365825: 'Add a help menu'.
 	* Fixed Bug #1365128: 'Add basic OS X support'.
